24.09.15 - OAuth2 로그인 시 닉네임 설정하도록 수정, 이 닉네임 기반으로 팔로우 요청 전송 가능 - FormLogin -> OAuth2, OAuth2->FormLogin 팔로우 로직 성공 - [수정필요] 매번 OAuth2 로그인 시 닉네임(실명)을 바꾸는 페이지 출력중 - [수정필요] Home이나 Follow 등의 FE 페이지 내 {loginUser}가 바뀌지 않고 있음 - OAuth2로 정보를 받아올 때 nickname을 받아올 방법이 없을 지 확인 필요