@@ -29,117 +29,101 @@ public class FollowService {
 
     // 팔로우 기능
     @Transactional
-    public void follow(String followerUsername, String memberUsername) {
+    public void follow(String followerNickname, String followingNickname) {
+        // 닉네임을 통해 username 가져오기
+        String followerUsername = getUsernameByNickname(followerNickname);
+        String followingUsername = getUsernameByNickname(followingNickname);
+
+        // member table의 id 조회
         Long followerId = getMemberIdByUsername(followerUsername);
-        Long memberId = getMemberIdByUsername(memberUsername);
+        Long followingId = getMemberIdByUsername(followingUsername);
 
         // 팔로우 대상과 팔로워가 존재하는지 확인
         MemberEntity follower = memberRepository.findById(followerId)
                 .orElseThrow(() -> new IllegalArgumentException("팔로워를 찾을 수 없습니다."));
-        MemberEntity member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
+        MemberEntity following = memberRepository.findById(followingId)
+                .orElseThrow(() -> new IllegalArgumentException("팔로우 대상 사용자를 찾을 수 없습니다."));
 
         // 이미 팔로우된 상태인지 확인
-        if (followsRepository.existsByFollowerAndMember(follower, member)) {
+        if (followsRepository.existsByFollowerAndFollowing(follower, following)) {
             throw new IllegalStateException("이미 팔로우 중입니다.");
         }
 
         // 예외사항에 해당되지 않으면 팔로우 진행
         FollowsEntity followsEntity = new FollowsEntity();
         followsEntity.setFollower(follower);
-        followsEntity.setMember(member);
+        followsEntity.setFollowing(following);
         followsRepository.save(followsEntity);
     }
 
     // 언팔로우 기능
     @Transactional
-    public void unfollow(String followerUsername, String memberUsername) {
+    public void unfollow(String followerNickname, String followingNickname) {
+        // 닉네임을 통해 username 가져오기
+        String followerUsername = getUsernameByNickname(followerNickname);
+        String followingUsername = getUsernameByNickname(followingNickname);
+
+        // member table의 id 조회
         Long followerId = getMemberIdByUsername(followerUsername);
-        Long memberId = getMemberIdByUsername(memberUsername);
+        Long followingId = getMemberIdByUsername(followingUsername);
 
         // 팔로우 대상과 팔로워가 존재하는지 확인
         MemberEntity follower = memberRepository.findById(followerId)
                 .orElseThrow(() -> new IllegalArgumentException("팔로워를 찾을 수 없습니다."));
-        MemberEntity member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
+        MemberEntity following = memberRepository.findById(followingId)
+                .orElseThrow(() -> new IllegalArgumentException("팔로우 대상 사용자를 찾을 수 없습니다."));
 
         // 팔로우 상태가 아닌지 확인
-        if (!followsRepository.existsByFollowerAndMember(follower, member)) {
+        if (!followsRepository.existsByFollowerAndFollowing(follower, following)) {
             throw new IllegalStateException("팔로우 관계가 존재하지 않습니다.");
         }
 
         // 예외사항에 해당되지 않으면 언팔로우 진행
-        followsRepository.deleteByFollowerAndMember(follower, member);
+        followsRepository.deleteByFollowerAndFollowing(follower, following);
     }
 
-    // {memberId}를 팔로우하는 팔로워 계정 목록 조회
-    public List<FollowDto> getFollowers(String memberUsername) {
-        // memberId를 통해 팔로워 조회
-        MemberEntity member = formUserRepository.findByUsername(memberUsername)
-                .orElseThrow(() -> new IllegalArgumentException("해당 유저가 없습니다"))
-                .getMemberEntity();
+    // {nickname}을 팔로우하는 팔로워 계정 목록 조회
+    public List<FollowDto> getFollowers(String nickname) {
+        // nickname으로 username 조회
+        String username = getUsernameByNickname(nickname);
 
-        List<FollowsEntity> followsEntities = followsRepository.findAllByMember(member);
+        // member table의 id 조회
+        Long followingId = getMemberIdByUsername(username);
 
-        // follower와 member의 닉네임을 조회하여 DTO에 담기
-        List<FollowDto> followerDTOs = followsEntities.stream().map(f -> {
-            String followerNickname = formUserRepository.findById(f.getFollower().getMemberId())
-                    .orElseThrow(() -> new IllegalArgumentException("팔로워 정보가 없습니다"))
-                    .getNickname();
+        // follow table에서 {followingId}를 팔로우하고 있는 리스트 조회
+        List<FollowsEntity> followsEntities = followsRepository.findAllByFollowing_MemberId(followingId);
 
-            String memberNickname = formUserRepository.findById(f.getMember().getMemberId())
-                    .orElseThrow(() -> new IllegalArgumentException("회원 정보가 없습니다"))
-                    .getNickname();
-
-            return new FollowDto(f.getFollower().getMemberId(), f.getMember().getMemberId(), followerNickname, memberNickname);
-        }).toList();
-
-        return followerDTOs;
+        // follower와 following의 닉네임을 조회하여 DTO에 담기
+        return followsEntities.stream()
+                .map(follow -> {
+                    // 팔로워의 닉네임을 가져옴
+                    String followerNickname = getNicknameByMemberId(follow.getFollower().getMemberId());
+                    String followingNickname = getNicknameByMemberId(follow.getFollowing().getMemberId());
+                    return new FollowDto(follow.getFollower().getMemberId(), follow.getFollowing().getMemberId(), followerNickname, followingNickname);
+                })
+                .collect(Collectors.toList());
     }
 
-    // {followerId}가 팔로우하는 계정 목록 조회
-    public List<FollowDto> getFollowing(String memberUsername) {
-        // memberId를 통해 팔로워 조회
-        MemberEntity member = formUserRepository.findByUsername(memberUsername)
-                .orElseThrow(() -> new IllegalArgumentException("해당 유저가 없습니다"))
-                .getMemberEntity();
+    // {nickname}이 팔로우하는 계정 목록 조회
+    public List<FollowDto> getFollowing(String nickname) {
+        // nickname으로 username 조회
+        String username = getUsernameByNickname(nickname);
 
-        List<FollowsEntity> followsEntities = followsRepository.findAllByFollower(member);
+        // member table의 id 조회
+        Long followerId = getMemberIdByUsername(username);
 
-        // follower와 member의 닉네임을 조회하여 DTO에 담기
-        List<FollowDto> followerDTOs = followsEntities.stream().map(f -> {
-            String followerNickname = formUserRepository.findById(f.getFollower().getMemberId())
-                    .orElseThrow(() -> new IllegalArgumentException("팔로워 정보가 없습니다"))
-                    .getNickname();
+        // follow table에서 {followerId}가 팔로우하고 있는 리스트 조회
+        List<FollowsEntity> followsEntities = followsRepository.findAllByFollower_MemberId(followerId);
 
-            String memberNickname = formUserRepository.findById(f.getMember().getMemberId())
-                    .orElseThrow(() -> new IllegalArgumentException("회원 정보가 없습니다"))
-                    .getNickname();
-
-            return new FollowDto(f.getFollower().getMemberId(), f.getMember().getMemberId(), followerNickname, memberNickname);
-        }).toList();
-
-        return followerDTOs;
-    }
-
-    private FollowDto createFollowDTO(FollowsEntity follows) {
-        String followerUsername = formUserRepository.findByMemberEntity(follows.getFollower())
-                .map(FormUserEntity::getUsername)
-                .orElseGet(() ->
-                        oAuth2UserRepository.findByMemberEntity(follows.getFollower())
-                                .map(OAuth2UserEntity::getUsername)
-                                .orElseThrow(() -> new IllegalArgumentException("팔로워 정보를 찾을 수 없습니다."))
-                );
-
-        String memberUsername = formUserRepository.findByMemberEntity(follows.getMember())
-                .map(FormUserEntity::getUsername)
-                .orElseGet(() ->
-                        oAuth2UserRepository.findByMemberEntity(follows.getMember())
-                                .map(OAuth2UserEntity::getUsername)
-                                .orElseThrow(() -> new IllegalArgumentException("팔로우 대상 정보를 찾을 수 없습니다."))
-                );
-
-        return new FollowDto(follows.getFollower().getMemberId(), follows.getMember().getMemberId(), followerUsername, memberUsername);
+        // follower와 following의 닉네임을 조회하여 DTO에 담기
+        return followsEntities.stream()
+                .map(follow -> {
+                    // 팔로워의 닉네임을 가져옴
+                    String followerNickname = getNicknameByMemberId(follow.getFollower().getMemberId());
+                    String followingNickname = getNicknameByMemberId(follow.getFollowing().getMemberId());
+                    return new FollowDto(follow.getFollower().getMemberId(), follow.getFollowing().getMemberId(), followerNickname, followingNickname);
+                })
+                .collect(Collectors.toList());
     }
 
     // username을 통해 memberId를 조회하는 메서드
@@ -154,4 +138,37 @@ public class FollowService {
                         .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."))
                 );
     }
+
+    // nickname을 통해 username을 가져오는 메서드
+    public String getUsernameByNickname(String nickname) {
+        // FormUserEntity에서 nickname 검색
+        Optional<FormUserEntity> formUser = formUserRepository.findByNickname(nickname);
+        if(formUser.isPresent()) {
+            return formUser.get().getUsername();
+        }
+
+        // OAuth2UserEntity에서 nickname 검색
+        Optional<OAuth2UserEntity> oauth2User = oAuth2UserRepository.findByNickname(nickname);
+        if(oauth2User.isPresent()) {
+            return  oauth2User.get().getUsername();
+        }
+
+        // 닉네임을 찾을 수 없는 경우
+        throw new IllegalArgumentException("사용자를 찾을 수 없습니다.");
+    }
+
+    private String getNicknameByMemberId(Long memberId) {
+        Optional<FormUserEntity> formUser = formUserRepository.findByMemberEntity_MemberId(memberId);
+        if (formUser.isPresent()) {
+            return formUser.get().getNickname();
+        }
+
+        Optional<OAuth2UserEntity> oauth2User = oAuth2UserRepository.findByMemberEntity_MemberId(memberId);
+        if (oauth2User.isPresent()) {
+            return oauth2User.get().getNickname();
+        }
+
+        throw new IllegalArgumentException("사용자를 찾을 수 없습니다.");
+    }
+
 }
